--- a/index.html
+++ b/index.html
@@ -1,14 +1,9 @@
 <!DOCTYPE HTML>
-<html lang="en-US">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=https://bgindependentmedia.org/">
-        <script type="text/javascript">
-            window.location.href = "https://bgindependentmedia.org/"
-        </script>
-        <title>Page Redirection</title>
-    </head>
-    <body>
-        If you are not redirected automatically, follow the <a href='https://bgindependentmedia.org/'>link to our homepage.</a>
-    </body>
+<html>
+<head>
+<meta http-equiv="refresh" content="15;url=https://bgindependentmedia.org/">
+</head>
+<body>
+...
+</body>
 </html>
