--- a/index.html
+++ b/index.html
@@ -1,9 +1,1 @@
-<!DOCTYPE HTML>
-<html>
-<head>
-<meta http-equiv="refresh" content="15;url=https://bgindependentmedia.org/">
-</head>
-<body>
-...
-</body>
-</html>
+<meta content='0;url=https://bgindependentmedia.org/' http-equiv='refresh'/>
