--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<meta content='0;url=https://bgindependentmedia.org/' http-equiv='refresh'/>
+<script>
+window.location.replace("https://bgindependentmedia.org/");
+</script>
